favicon qui fonctionne

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
  <head>
  <meta charset="utf-8" />
  <title>Test</title>
-	 <link type="text/css" rel="stylesheet" href="css/style.css" />
+	<link type="text/css" rel="stylesheet" href="css/style.css" />
+	<link rel="icon" type="image/png" href="img/horde.png" />
  </head>
 
  <body>
