--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 	 <p class = "p3">L'extrait standard de Lorem Ipsum utilisé depuis le XVIè siècle est reproduit ci-dessous pour les curieux. Les sections 1.10.32 et 1.10.33 du "De Finibus Bonorum et Malorum" de Cicéron sont aussi reproduites dans leur version originale, accompagnée de la traduction anglaise de H. Rackham (1914).</p>
 
 	<section>
-		<h1>Mairie de Calais</h1>
-		 <img  id="calais" type ="image" src="img/calais.jpg" height="500" width="500"/>
+		<h2>Mairie de Calais</h2>
+		<img  id="calais" alt="Photo de la mairie de Calais" src="img/calais.jpg" height="500" width="500"/>
 	</section>
 	
 	<form>
