--- a/tp2/index.html
+++ b/tp2/index.html
@@ -4,6 +4,7 @@
  <meta charset="utf-8" />
  <title>Test</title>
 	<link type="text/css" rel="stylesheet" href="css/style.css" />
+     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link rel="icon" type="image/png" href="img/horde.png" />
  </head>
 
@@ -22,7 +23,7 @@
  
      <table>
          <tr>
-             <td>Sports</td>
+             <th>Sports</th>
              <td>Tennis de table</td>
              <td>Football</td>
              <td>Poney</td>
@@ -31,7 +32,7 @@
              <td>Basketball</td>
          </tr>
         <tr>
-            <td>Compétions</td>
+            <th>Compétions</th>
             <td>Jeux Olympiques</td>
             <td>Championnats d'Europe</td>
             <td>Coupe du monde</td>
@@ -42,11 +43,12 @@
      </table>
  
 	<form>
-        <div class ="prenom"><label for="prenom"><h2>Prenom :</h2></label><input type="text" name="prenom" placeholder="Prenom"/></div>
-        <br><div class ="date"><label for="date"><h2>Date :</h2></label> <input type="date" name="naissance" placeholder="Date de naissance"/></div>
-       <br> <div class="email"><label for="email"><h2>Email :</h2></label><input type="email" name="email" placeholder="Email"/></div>
-        <br><div class="tel"><label for="tel"><h2>Tel :</h2></label><input type="tel" name="tel" placeholder="Telephone"/></div>
-        <br><div class="url"><label for="url"><h2>URL :</h2></label><input type="url" name="fb" placeholder="Facebook"/></div>
+        <p class="formu"><h2>Inscrivez-vous</h2><p>
+        <div class ="prenom"><label for="prenom"><h3>Prenom :</h3></label><input type="text" name="prenom" placeholder="Prenom"/></div>
+        <br><div class ="date"><label for="date"><h3>Date :</h3></label> <input type="date" name="naissance" placeholder="Date de naissance"/></div>
+       <br> <div class="email"><label for="email"><h3>Email :</h3></label><input type="email" name="email" placeholder="Email"/></div>
+        <br><div class="tel"><label for="tel"><h3>Tel :</h3></label><input type="tel" name="tel" placeholder="Telephone"/></div>
+        <br><div class="url"><label for="url"><h3>URL :</h3></label><input type="url" name="fb" placeholder="Facebook"/></div>
 	</form>
  </body>
 </html>
