--- a/tp2/index.html
+++ b/tp2/index.html
@@ -7,9 +7,13 @@
      <meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link rel="icon" type="image/png" href="img/horde.png" />
  </head>
-
+<header>
+    <div class="logoiut">
+        <img  id="iut" alt="Logo de l'iut de calais" src="img/iut.jpg"/>
+    </div>
+    <h1>M4105C un super module</h1>
+</header>
  <body>
-	 <h1>Qu'est-ce que le Lorem Ipsum?</h1>
 	 <p class = "p1">PARAGRAPHE 1</p>
 
 	 <p class ="p2">PARAGRAPHE 2 </p>
@@ -51,4 +55,7 @@
         <br><div class="url"><label for="url"><h3>URL :</h3></label><input type="url" name="fb" placeholder="Facebook"/></div>
 	</form>
  </body>
+<footer>
+    <p>Ceci est un footer de qualité</p>
+</footer>
 </html>
